--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jitangupta/bootstrap5-dialog",
-  "version": "0.0.1",
+  "name": "@MrCiny/bootstrap5-dialog",
+  "version": "1.0.0",
   "description": "Make use of Bootstrap Modal more monkey-friendly.",
   "directories": {
     "example": "examples"
@@ -11,27 +11,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jitangupta/bootstrap5-dialog.git"
+    "url": "https://github.com/MrCiny/bootstrap5-dialog.git"
   },
   "keywords": [
     "bootstrap",
     "dialog",
     "bootstrap 5"
   ],
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/jitangupta"
-  },
   "author": {
-    "name": "jitangupta",
-    "email": "hi@jitangupta.com"
+    "name": "mrciny"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jitangupta/bootstrap5-dialog/issues"
+    "url": "https://github.com/MrCiny/bootstrap5-dialog/issues"
   },
-  "homepage": "https://jitangupta.github.io/bootstrap5-dialog/",
+  "homepage": "https://mrciny.github.io/bootstrap5-dialog/",
   "devDependencies": {
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.3.8",
     "autoprefixer": "^10.2.6",
     "browser-sync": "^2.27.4",
     "cssnano": "^5.0.6",
