--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "name": "cross-solution/bootstrap5-dialog",
+    "name": "MrCiny/bootstrap5-dialog",
     "description": "Make use of Bootstrap Modal more monkey-friendly.",
     "license": "MIT",
     "authors": [
         {
-            "name": "jitangupta",
-            "email": "hi@jitangupta.com"
+            "name": "mrciny",
         }
     ],
     "require": {
