--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "bootstrap3-dialog",
-    "description": "Make use of Bootstrap Modal more monkey-friendly. http://nakupanda.github.io/bootstrap3-dialog/",
-    "version": "1.35.4",
+    "name": "bootstrap5-dialog",
+    "description": "Make use of Bootstrap Modal more monkey-friendly. http://mrciny.github.io/bootstrap5-dialog/",
+    "version": "1.0.0",
     "keywords": [
         "css",
         "js",
@@ -12,7 +12,7 @@
         "framework",
         "web"
     ],
-    "homepage": "http://nakupanda.github.io/bootstrap3-dialog/",
+    "homepage": "http://mrciny.github.io/bootstrap5-dialog/",
     "main": [
         "dist/less/bootstrap-dialog.less",
         "dist/css/bootstrap-dialog.min.css",
@@ -32,7 +32,7 @@
         "README.md"
     ],
     "dependencies": {
-        "bootstrap": ">= 3.1.0",
-        "jquery": ">= 1.9.0"
+        "bootstrap": ">= 5.3.8",
+        "jquery": ">= 3.6.0"
     }
 }
